--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,7 @@
 version: '3'
 
 services:
-  nginx:
+  md2mobi:
     build: .
     ports:
-      - 80:80
-    volumes:
-      - ./html:/etc/nginx/html
-      - ./nginx.conf:/etc/nginx/nginx.conf
-      - ./log:/var/nginx/log
+      - 80:8000
